# FlowHttp

./: CMakeLists.txt  Cookie.h  CookieGod.h  CookieUtil.h  FlowAsio.h  FlowHttp.h  FlowHttp2.h  FlowHttp3.h  FlowHttp4.h  FlowHttp5.h  HttpParserState.h  HttpStatus.h  MimeTypes.h  MulPaField.h  README.md  Request.h  RequestMethod.h  Response.h  Socket.h  WebSocketFrame.h  WebsocketClient.h  main.cpp  main2.cpp  main3.cpp
cmake_modules/: FindBrotli.cmake
hpack/: HPack.h  HPackTable.h  Huffman.h  hmain.cpp
http2/: Frame.h  Setting.h
manager/: Http2Manager.h  Http2Session.h  Session.h  SessionManager.h  WebSocketManager.h  WebSocketSession.h
request_object/: RequestArray.h  RequestBoolean.h  RequestEntry.h  RequestInteger.h  RequestNumber.h  RequestObject.h  RequestString.h  TestObject.h
routes/: BasicAuth.h  FileBrowser.h  FileNotFound.h  FunctionRoute.h  GetBrotliRoute.h  GetRoute.h  HeaderSecurity.h  Http2.h  IfModifiedSince.h  InfoRoute.h  JsonToParameter.h  ListFiles.h  ListFilesBack.h  ListFilesJson.h  ListOnlyFiles.h  Login.h  PathCheck.h  PrintRequest.h  RelationalUpload.h  Route.h  Router.h  SessionRoute.h  SimpleUploadRoute.h  SingleApiTokenAuth.h  StaticUploadRoute.h  TestRoute.h  ValidateRoute.h  ValidateSession.h  WebSocket.h
util/: ArgParserUtil.h  UploadUtil.h  WebSocketUtil.h
webdav/: Webdav.h  Webdav_HEAD.h  Webdav_PROPFIND.h
www/: index.html  login.html
www/public/: login.css  style.css
www/spotify/: index.html
